# pqr-d50

./: .gitignore  LICENSE  README.md  capture.py  pyproject.toml
docs/: PROTOCOL.md
esp32/pqr-d50-bridge/: CMakeLists.txt  README.md  sdkconfig.defaults
esp32/pqr-d50-bridge/.cache/clangd/index/: cdc_acm_host.c.5F51BCE79539AE51.idx  cdc_acm_host.h.4AEEB4769F075112.idx  cdc_acm_host_interface.h.F644519A6ABA9B6C.idx  cdc_acm_host_ops.h.2832447AC220E66E.idx  cdc_host_acm_compliant.c.912F48F33E85976A.idx  cdc_host_acm_compliant.h.3D0E30288CAED094.idx  cdc_host_common.h.281B60DEAE69E18C.idx  cdc_host_descriptor_parsing.c.51535CCDCA8C7362.idx  cdc_host_descriptor_parsing.h.AD4ECF27319C4B00.idx  cdc_host_ops.c.29999D3F1D297D7B.idx  cdc_host_types.h.F72B86EA634C814B.idx  config.h.05605745B19815EE.idx  d50_parse.c.924CE5F5459FF87F.idx  d50_parse.h.76416C61F0A880C4.idx  influx.c.EA42DA698E7072B4.idx  influx.h.B81AF70E96EE1D76.idx  main.cpp.F4ADBFE08D1F229D.idx  usb_host_ftdi_vcp.c.BD4CD6BB3FBB19ED.idx  usb_host_vcp.cpp.D3CE02C0E83174C4.idx  usb_types_cdc.h.1C45090153CC1953.idx  vcp.hpp.8D40AC950A3F0594.idx  vcp_ftdi.h.F1DC61CE03D65CF4.idx  vcp_ftdi.hpp.C2534071650CB2C6.idx
esp32/pqr-d50-bridge/grafana/: pqr-d50-dashboard.json
esp32/pqr-d50-bridge/main/: CMakeLists.txt  config.h  d50_parse.c  d50_parse.h  idf_component.yml  influx.c  influx.h  main.cpp  secrets.h.example
esp32/pqr-d50-bridge/test/: host_test.c
examples/: quickstart.py
pqr_d50/: __init__.py  client.py  parsers.py  protocol.py
tools/: pqrdev.py
